@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-21T16:23:34Z",
-  "count" : 2,
+  "timestamp" : "2024-06-04T01:18:59Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
