@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-06-03T01:19:41Z",
-  "count_outdated" : 766,
-  "uniques_outdated" : 379,
+  "timestamp" : "2024-06-04T01:18:59Z",
+  "count_outdated" : 768,
+  "uniques_outdated" : 381,
   "count" : 786,
   "uniques" : 396,
   "clones" : [
     {
-      "timestamp": "2024-05-20T00:00:00Z",
+      "timestamp": "2024-05-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2024-05-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
